# cards_for_article

./: pyproject.toml
src/: articles.xlsx  main.py
